force-app/main/default/objects/Trainer__c/fields/Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Rate__c</fullName>
    <label>Hourly Rate</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>