force-app/main/default/objects/Trainer__c/fields/Specialization__c.field-meta.xml
<CustomField>
    <fullName>Specialization__c</fullName>
    <label>Specialization</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fitness</fullName>
            </value>
            <value>
                <fullName>Yoga</fullName>
            </value>
            <value>
                <fullName>Nutrition</fullName>
            </value>
            <value>
                <fullName>Strength</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>